--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "yasith-react",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+    "scripts": {
+      "dev": "node server.js",
+      "build": "next build",
+      "start": "NODE_ENV=production node server.js"
+    }
+  ,
   "dependencies": {
     "bootstrap": "^5.2.0",
     "emailjs-com": "^3.2.0",
